[package]
name = "blex"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
keywords = ["lexer", "lex", "token", "tokenizer", "tokenization"]
categories = ["development-tools", "parsing"]
authors = ["Mondobe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
